# LinkWatcher

./: .ai-entry-point.md  .gitignore  .linkwatcher-ignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOW_IT_WORKS.md  IMPROVEMENT_SUMMARY.md  LinkWatcherBrokenLinks.txt  MARKDOWN_TEST_CASES_SUMMARY.md  MULTI_PROJECT_SETUP.md  Makefile  QUICK_REFERENCE.md  README.md  README_LINK_WATCHER.md  RESTRUCTURE_README.md  ai-tasks.md  check_links.py  debug_detailed.py  debug_file_path.py  debug_path_calc.py  debug_with_prints.py  dependency_graph.html  dependency_map.json  dev.bat  final.py  fix_syntax_errors.py  install_global.py  link_watcher.py  link_watcher_new.py  main.py  post-move-remaining-refs-run2.md  post-move-remaining-refs.md  pyproject.toml  pytest.ini  ratings-input.json  requirements.txt  run_tests.py  (+9 more)
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.zencoder/: mcp.local.json
.zencoder/rules/: repo.md
Archive/: link_watcher_backup.py
LinkWatcher/: LinkWatcherLog.txt  start_linkwatcher.sh  start_linkwatcher_background.ps1
LinkWatcher_run/: .linkwatcher-ignore  LinkWatcherBrokenLinks.txt  LinkWatcherLog.txt  LinkWatcherLog_20260331-072913.txt  LinkWatcherLog_20260331-072913_20260331-074026.txt  LinkWatcherLog_20260331-072913_20260331-074026_20260331-203808_20260401-110504_20260402-102805.txt  LinkWatcherLog_debug.txt  LinkWatcherStdout.txt  bg_stdout.txt  setup_project.py  start_link_watcher.py  start_linkwatcher.bat  start_linkwatcher.ps1  start_linkwatcher_background.ps1
config-examples/: advanced-logging-config.yaml  debug-config.yaml  linkwatcher-config.yaml  logging-config.yaml  production-config.yaml
debug/: debug_directory_handler.py  debug_nested_directory.py  debug_python_import_update.py  debug_updater.py  investigate_directory_test.py  test_directory_move.py  test_file_movement_demo.py  test_python_imports.py
deployment/: install_global.py  propagate_config_schema.py  setup_project.py
doc/: PD-documentation-map.md  PD-id-registry.json  README.md  id-registry.json  project-config.json
doc/archived-pre-framework/: CI_CD_IMPLEMENTATION_SUMMARY.md  LOGGING.md  MARKDOWN_TEST_CASES_SUMMARY.md  ci-cd.md
doc/ci-cd/: ci-cd-dependencies-visualization.md  ci-cd-documentation-maintenance.md  release-process.md
doc/documentation-tiers/: README.md
doc/process-framework/: .ai-entry-point.md  PF-id-registry.json  README.md  ai-tasks.md  documentation-map.md  domain-config.json  project-config.json
doc/product-docs/: PD-id-registry.json  README.md  test-gaps-post-move-2026-03-31.md
doc/refactoring/: README.md
doc/state-tracking/: PF-id-registry-local.json
doc/technical/: feature-dependencies.md
docs/: FILE_TYPE_QUICK_FIX.md  LOGGING.md  README.md  TROUBLESHOOTING_FILE_TYPES.md  test-case-guide.md  testing.md
examples/: logging_demo.py
linkwatcher/: __init__.py  database.py  dir_move_detector.py  handler.py  link_types.py  logging.py  logging_config.py  models.py  move_detector.py  parser.py  path_resolver.py  reference_lookup.py  service.py  updater.py  utils.py  validator.py
linkwatcher/config/: __init__.py  defaults.py  settings.py
linkwatcher/parsers/: __init__.py  base.py  dart.py  generic.py  json_parser.py  markdown.py  patterns.py  powershell.py  python.py  yaml_parser.py
linkwatcher_doc/: handler.py
logs/: LinkWatcherBrokenLinks.txt
manual_markdown_tests/: LR-001_standard_links_parser.md  LR-001_standard_links_parser.md.linkwatcher.bak  LR-002_relative_links.md  LR-002_relative_links.md.linkwatcher.bak  LR-003_links_with_anchors.md  LR-003_links_with_anchors.md.linkwatcher.bak  MP-001_standard_links.md  MP-001_standard_links.md.linkwatcher.bak  MP-002_reference_links.md  MP-002_reference_links.md.linkwatcher.bak  MP-003_inline_code.md  MP-004_code_blocks.md  MP-004_code_blocks.md.linkwatcher.bak  MP-005_html_links.md  MP-006_image_links.md  MP-007_links_with_titles.md  MP-008_malformed_links.md  MP-009_escaped_characters.md  MP-010_special_characters_filenames.md  test_runner.py
manual_markdown_tests/test_project/: LR-002_relative_links.md  README.md  README.md.linkwatcher.bak  file & report.txt  file (draft).txt  file [v2].txt  inline.txt  manual_test.py  python_script.py  root.txt
manual_test/: Log.txt  README.md  TEST_POWERSHELL_LINKS.md
manual_test/docs/: api.md  config.yaml  user-guide.md
manual_test/scripts/: deploy.ps1  setup.ps1
manual_test/src/: main.py  utils.py
old/: DEPRECATION_LOG.md  README_LINK_WATCHER.md  link_watcher_old.py
process-framework/: .ai-entry-point.md  .framework-central-pointer  .framework-version  PF-documentation-map.md  PF-id-registry.json  README.md  ai-tasks.md  documentation-map.md  domain-config.json  project-config.json
process-framework-local/: PF-id-registry-local.json
process-framework-local/evaluation-reports/: 20260408-framework-evaluation-performance-testing-support-targeted-evaluation-of.md  20260409-framework-evaluation-targeted-evaluation-of-pftsk012-test-specification.md  20260410-framework-evaluation-pftsk012-routing-phase-e2e-and-performance-routing.md  20260411-framework-evaluation-adr-infrastructure-and-architecture-feature-separa.md  20260412-framework-evaluation-performance-testing-workflow-trigger-mechanism-for.md  20260412-framework-evaluation-targeted-evaluation-of-test-audit-task-pftsk030-va.md  20260414-framework-evaluation-00setup-onboarding-tasks-evaluating-whether-the-4-.md  20260414-framework-evaluation-feedback-form-subprocess.md  (+1 more)
scripts/: __init__.py  benchmark.py  check_links.py  cleanup_test.py  create_test_structure.py  feedback_db.py  setup_cicd.py
src/linkwatcher/: __init__.py  (+12 more)
test/: TE-documentation-map.md  TE-id-registry.json  test-config.json  test-registry.yaml  test-source-move.md  test-source.md  test-target.md  test_file_path_detection.py  test_rename_functionality.py  test_workflow.py
tests/: README.md  TEST_CASE_STATUS.md  TEST_CASE_TEMPLATE.md  TEST_PLAN.md  conftest.py  test_directory_move_detection.py  test_move_detection.py  utils.py
tools/: logging_dashboard.py
(+5174 files in other folders)
